K8S/command-service-depl.yaml
#
# Platform Service Pod
#

apiVersion: apps/v1
kind: Deployment

# the name of this deployment is specified in the metadata
metadata:
  name: command-service-depl

# the specs describe how the pod deployment is structured
spec:
  replicas: 1 # spin up 1 pod with this specified template
  
  # the selector searches for the matching template with the same name
  selector:
    matchLabels:
      app: command-service
  
  # the template describes what image and container we're going to use in this pod
  template:
    metadata:
      labels:
        app: command-service
    
    # specify the container we're going to use
    spec:
      containers:
        - name: command-service
          image: robinlarondelle/command-service:latest

---
# this is the cluster IP service for the platform service
apiVersion: v1
kind: Service

# name of the cluster ip service
metadata:
  name: command-service-cluster-ip

spec:
  type: ClusterIP
  selector:
    app: command-service
  ports:
    - name: command-service
      protocol: TCP
      port: 80
      targetPort: 80
