K8S/mssql-platform-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mssql-platform-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssqldb
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-claim
---
apiVersion: v1
kind: Service

metadata:
  name: mssql-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - port: 1433
      name: mssql
      protocol: TCP
      targetPort: 1433
      
---
apiVersion: v1
kind: Service

metadata:
  name: mssql-service-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
  - port: 1433
    protocol: TCP
    targetPort: 1433
