K8S/rabbit-mq-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rabbit-mq-depl
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              name: rmq-mng-port
            - containerPort: 5672
              name: rmq-msg-port
---
apiVersion: v1
kind: Service

metadata:
  name: rabbit-mq-cluster-ip
  
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - port: 15672
      targetPort: 15672
      protocol: TCP
      name: rmq-mng-port
    - port: 5672
      targetPort: 5672
      name: rmq-msg-port
      protocol: TCP
---
apiVersion: v1
kind: Service

metadata:
  name: rabbit-mq-loadbalancer
  
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - port: 15672
      targetPort: 15672
      name: rmq-mng-port
      protocol: TCP
    - port: 5672
      targetPort: 5672
      name: rmq-msg-port
      protocol: TCP
