K8S/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

# name of this service
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes/use-regex: 'true'

spec:
  rules:
    - host: mt.com
      http:
        paths:
          - path: /api/platform
            pathType: Prefix
            backend:
              service:
                name: platform-service-cluster-ip
                port:
                  number: 80
          - path: /api/c/platform
            pathType: Prefix
            backend:
              service:
                name: command-service-cluster-ip
                port:
                  number: 80
